# mcp-google-workspaces

./: .coverage  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
src/mcp_google_workspace/: __init__.py  auth.py  context.py  registry.py  sandbox.py  server.py
src/mcp_google_workspace/tools/: __init__.py
src/mcp_google_workspace/tools/docs/: __init__.py  _utils.py  comments.py  format.py  manage.py  markdown.py  read.py  smart_chips.py  table.py  tabs.py  write.py
src/mcp_google_workspace/tools/sheets/: __init__.py  charts.py  comments.py  format.py  manage.py  read.py  write.py
src/mcp_google_workspace/utils/: __init__.py  common.py  sheets.py
tests/: test_auth.py  test_docs_comments.py  test_docs_format.py  test_docs_manage.py  test_docs_manage_html.py  test_docs_markdown.py  test_docs_read_indices.py  test_docs_section_replace.py  test_docs_smart_chips.py  test_docs_table.py  test_docs_table_batch.py  test_docs_table_content.py  test_docs_tabs.py  test_docs_tools.py  test_docs_utils.py  test_docs_write.py  test_registry.py  test_retry.py  test_sandbox.py  test_server.py  test_sheets_comments.py  test_sheets_format.py  test_sheets_manage.py  test_sheets_read.py  test_sheets_write.py  test_tools.py  test_utils.py
